dist_doc_DATA = README

bin_PROGRAMS = wsim

#CC sources
wsim_SOURCES = acpp/src/alloca.c
wsim_SOURCES += acpp/src/cccp.c
wsim_SOURCES += acpp/src/obstack.c
wsim_SOURCES += acpp/src/version.c
wsim_SOURCES += acpp/src/y.tab.c
#wsim_SOURCES += src/ga_i.c
wsim_SOURCES += src/assigns.c
#wsim_SOURCES += src/Copy of formain.c
wsim_SOURCES += src/derivs.c
wsim_SOURCES += src/Excitation_Functions.c
wsim_SOURCES += src/formain.c
wsim_SOURCES += src/formain60.c
wsim_SOURCES += src/formain_ga.c
wsim_SOURCES += src/gait_main.c
wsim_SOURCES += src/GaussPattern.c
wsim_SOURCES += src/gmc.c
wsim_SOURCES += src/inits.c
wsim_SOURCES += src/invert.c
wsim_SOURCES += src/mathtools.c
wsim_SOURCES += src/model_d.c
wsim_SOURCES += src/model_s.c
wsim_SOURCES += src/pipetools.c
wsim_SOURCES += src/readmuscles.c
wsim_SOURCES += src/readtools.c
wsim_SOURCES += src/sdfor.c
wsim_SOURCES += src/sdforWalk.c
wsim_SOURCES += src/sdlib.c
wsim_SOURCES += src/wrapping.c

#CXX sources
wsim_SOURCES += src/BiModalPattern.cpp
wsim_SOURCES += src/CostFunc.cpp
wsim_SOURCES += src/CostFunc_adjusted.cpp
wsim_SOURCES += src/FileReadWrite.cpp
wsim_SOURCES += src/ga_i.cpp
wsim_SOURCES += src/ga_main.cpp
wsim_SOURCES += src/ga_pop.cpp
wsim_SOURCES += src/ModPattern.cpp
wsim_SOURCES += src/SetExcPattern_Templates.cpp
wsim_SOURCES += src/SetParamBounds.cpp
wsim_SOURCES += src/SetPattern.cpp
wsim_SOURCES += src/SetStructure.cpp
wsim_SOURCES += src/Simann.cpp
wsim_SOURCES += src/UpdatePattern.cpp

wsim_HEADERS = acpp/src/config.h
wsim_HEADERS += acpp/src/make_depend.h
wsim_HEADERS += acpp/src/obstack.h
wsim_HEADERS += acpp/src/tm.h
wsim_HEADERS += Simann/ga_main.h
wsim_HEADERS += src/basic.h
wsim_HEADERS += src/ExcGroups.h
wsim_HEADERS += src/functions.h
wsim_HEADERS += src/ga_i.h
wsim_HEADERS += src/ga_main.h
wsim_HEADERS += src/ga_pop.h
wsim_HEADERS += src/Look.h
wsim_HEADERS += src/macros.h
wsim_HEADERS += src/mathtools.h
wsim_HEADERS += src/SA.h
wsim_HEADERS += src/SAstructs.h
wsim_HEADERS += src/structs.h
wsim_HEADERS += src/system_params.h
wsim_HEADERS += src/universal.h
